@@ -98,3 +98,5 @@
 #undef FUNCTION_SECTIONS
 
 #undef SUPPORTS_ALIGNED_ATTRIBUTE
+
+#undef SUPPORTS_TREE_VECTORIZE
